fix: gaps and paddings

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ body {
 
 .person-description {
     font-size: 0.875rem;
+    margin-top: 4px;
 }
 
 .links-container {
@@ -101,7 +102,7 @@ body {
     place-items: center;
     row-gap: 18px;
     width: 100%;
-    margin-top: 6px;
+    margin-top: 7px;
 }
 
 /*BUTTONS*/
@@ -111,7 +112,7 @@ body {
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
     color: white;
-    padding: 11px;
+    padding: 12px;
     border-radius: 10px;
     border: none;
     cursor: pointer;
